# rv

./: .gitignore  .golangci.yml  404.html  AGENTS.md  DEV.md  LICENSE  Makefile  README.md  export_docs.py  go.mod  go.sum  hashmap.json  index.html  main.go  rtasks.rrpc  worker.example.yaml
assets/: app.84VUxAlK.js  app.BNBoyId2.js  app.BkM6r0Wd.js  app.CHu0frZ1.js  app.CRDaQtB0.js  app.D2ENXydW.js  app.DbHiGfSy.js  app.sUZLw0gE.js  en_api_index.md.9EuxPJKe.js  en_api_index.md.9EuxPJKe.lean.js  en_api_index.md.BAHutMu6.js  en_api_index.md.BAHutMu6.lean.js  en_api_index.md.BXagFdVa.js  en_api_index.md.BXagFdVa.lean.js  (+75 more)
tests/regression/: .gitignore  README.md  main.py  pyproject.toml
tests/regression/golden/1_primitives_scene/: _meta.json
tests/regression/golden/2_properties_scene/: _meta.json
tests/regression/golden/3_scattering_custom_domain/: _meta.json
tests/regression/golden/3_scattering_ellipse_2d/: _meta.json
tests/regression/golden/3_scattering_hull_3d/: _meta.json
tests/regression/golden/3_scattering_parametric_scatter/: _meta.json
tests/regression/golden/4_semantic_aov_scene/: _meta.json
tests/regression/golden/5_physics_scatter/: Depth.exr  _meta.json
tests/regression/golden/5_physics_simple/: Depth.exr  _meta.json
tests/regression/golden/5_physics_wall_break/: Depth.exr  _meta.json
tests/regression/golden/7_modules_scene/: _meta.json
tests/regression/golden/8_shader_graph_scene/: _meta.json
tests/regression/regression/: __init__.py  cases.py  runner.py
utils/: pyproject.toml
utils/src/utils/: __init__.py  preview.py
(+208 files in other folders)
