[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mikhail Pankin", email = "mishapankin@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["opencv-python>=4.13.0.92"]

[project.scripts]
preview = "utils:preview"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
